force-app/main/default/objects/Account/fields/accm1_cus_sup__c.field-meta.xml
<CustomField>
    <fullName>accm1_cus_sup__c</fullName>
    <inlineHelpText>Account Number in MTMS</inlineHelpText>
    <label>Account Number (MTMS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>