force-app/main/default/objects/Account/fields/accm1_rec_type__c.field-meta.xml
<CustomField>
    <fullName>accm1_rec_type__c</fullName>
    <inlineHelpText>Record type.  1= Customer, 2= Vendor</inlineHelpText>
    <label>Record Type (MTMS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>