force-app/main/default/objects/Account/fields/accm2_cus_sup__c.field-meta.xml
<CustomField>
    <fullName>accm2_cus_sup__c</fullName>
    <inlineHelpText>Account Number</inlineHelpText>
    <label>accm2_cus_sup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>