force-app/main/default/objects/Account/fields/accm3_cus_sup__c.field-meta.xml
<CustomField>
    <fullName>accm3_cus_sup__c</fullName>
    <inlineHelpText>Account Number in MTMS</inlineHelpText>
    <label>accm3_cus_sup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>