force-app/main/default/objects/Account/fields/accmaccm_region__c.field-meta.xml
<CustomField>
    <fullName>accmaccm_region__c</fullName>
    <inlineHelpText>Region</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXPORT</fullName>
            </value>
            <value>
                <fullName>MIDATL</fullName>
            </value>
            <value>
                <fullName>MID E</fullName>
            </value>
            <value>
                <fullName>MID W</fullName>
            </value>
            <value>
                <fullName>N EAST</fullName>
            </value>
            <value>
                <fullName>N WEST</fullName>
            </value>
            <value>
                <fullName>PLAINS</fullName>
            </value>
            <value>
                <fullName>S EAST</fullName>
            </value>
            <value>
                <fullName>SOUTH</fullName>
            </value>
            <value>
                <fullName>S WEST</fullName>
            </value>
            <value>
                <fullName>WEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>