force-app/main/default/objects/Account/fields/accmaddress_line1__c.field-meta.xml
<CustomField>
    <fullName>accmaddress_line1__c</fullName>
    <inlineHelpText>Address Line 1.  Should match cvofaddress_line1.  If not Legal address is different than profile address.</inlineHelpText>
    <label>accmaddress_line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>