force-app/main/default/objects/Account/fields/accmaddress_line2__c.field-meta.xml
<CustomField>
    <fullName>accmaddress_line2__c</fullName>
    <inlineHelpText>Address Line2.  Should match cvofaddress_line2.  If not Legal address is different than profile address.</inlineHelpText>
    <label>accmaddress_line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>