force-app/main/default/objects/Account/fields/accmaddress_line3__c.field-meta.xml
<CustomField>
    <fullName>accmaddress_line3__c</fullName>
    <inlineHelpText>Address Line3.  Should match cvofaddress_line3.  If not Legal address is different than profile address.</inlineHelpText>
    <label>accmaddress_line3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>