force-app/main/default/objects/Account/fields/accmanalysis1__c.field-meta.xml
<CustomField>
    <fullName>accmanalysis1__c</fullName>
    <inlineHelpText>Shortened State and Country, and &quot;A&quot; means Active.</inlineHelpText>
    <label>accmanalysis1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>