force-app/main/default/objects/Account/fields/accmanalysis2__c.field-meta.xml
<CustomField>
    <fullName>accmanalysis2__c</fullName>
    <inlineHelpText>Tax ID data</inlineHelpText>
    <label>accmanalysis2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>