force-app/main/default/objects/Account/fields/accmanalysis3__c.field-meta.xml
<CustomField>
    <fullName>accmanalysis3__c</fullName>
    <inlineHelpText>Payment Terms</inlineHelpText>
    <label>accmanalysis3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>