force-app/main/default/objects/Account/fields/accmcarrier__c.field-meta.xml
<CustomField>
    <fullName>accmcarrier__c</fullName>
    <inlineHelpText>Industry Group</inlineHelpText>
    <label>accmcarrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANIMAL FEED</fullName>
            </value>
            <value>
                <fullName>BAKERY</fullName>
            </value>
            <value>
                <fullName>BLENDER</fullName>
            </value>
            <value>
                <fullName>CHEESE</fullName>
            </value>
            <value>
                <fullName>CONFECTION.</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTOR</fullName>
            </value>
            <value>
                <fullName>FOOD SERVICE</fullName>
            </value>
            <value>
                <fullName>FROZEN FOODS</fullName>
            </value>
            <value>
                <fullName>ICE CREAM</fullName>
            </value>
            <value>
                <fullName>INTERMED.</fullName>
            </value>
            <value>
                <fullName>NUTRI FOODS</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PET FOODS</fullName>
            </value>
            <value>
                <fullName>PREP. FOODS</fullName>
            </value>
            <value>
                <fullName>SNACK FOODS</fullName>
            </value>
            <value>
                <fullName>AGENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>