force-app/main/default/objects/Account/fields/accmclear_to_pay__c.field-meta.xml
<CustomField>
    <fullName>accmclear_to_pay__c</fullName>
    <label>accmclear_to_pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>