force-app/main/default/objects/Account/fields/accmcredit_limit__c.field-meta.xml
<CustomField>
    <fullName>accmcredit_limit__c</fullName>
    <inlineHelpText>Credit Limit</inlineHelpText>
    <label>Credit Limit (accm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>