force-app/main/default/objects/Account/fields/accmcredit_stat__c.field-meta.xml
<CustomField>
    <fullName>accmcredit_stat__c</fullName>
    <inlineHelpText>Credit Status</inlineHelpText>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Clear</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Over Warning</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Over Limit</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Stop</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Always Clear</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Proforma</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>