force-app/main/default/objects/Account/fields/accmcredit_warn__c.field-meta.xml
<CustomField>
    <fullName>accmcredit_warn__c</fullName>
    <inlineHelpText>Credit Warning</inlineHelpText>
    <label>accmcredit_warn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>