force-app/main/default/objects/Account/fields/accmcurr__c.field-meta.xml
<CustomField>
    <fullName>accmcurr__c</fullName>
    <inlineHelpText>Currency</inlineHelpText>
    <label>accmcurr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>