force-app/main/default/objects/Account/fields/accmdate_created__c.field-meta.xml
<CustomField>
    <fullName>accmdate_created__c</fullName>
    <inlineHelpText>Creation Date</inlineHelpText>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>