force-app/main/default/objects/Account/fields/accmdate_l_cash__c.field-meta.xml
<CustomField>
    <fullName>accmdate_l_cash__c</fullName>
    <inlineHelpText>Last Cash Date</inlineHelpText>
    <label>Last Cash Rec&apos;d</label>
    <type>Date</type>
</CustomField>