force-app/main/default/objects/Account/fields/accmdate_l_inv__c.field-meta.xml
<CustomField>
    <fullName>accmdate_l_inv__c</fullName>
    <inlineHelpText>Last Invoiced Date</inlineHelpText>
    <label>Last date Invoiced</label>
    <type>Date</type>
</CustomField>