force-app/main/default/objects/Account/fields/accmfax__c.field-meta.xml
<CustomField>
    <fullName>accmfax__c</fullName>
    <inlineHelpText>Fax Number</inlineHelpText>
    <label>accmfax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>