force-app/main/default/objects/Account/fields/accmgroup__c.field-meta.xml
<CustomField>
    <fullName>accmgroup__c</fullName>
    <inlineHelpText>CustomerGroups: Domestic, Export -- Vendor Groups:  Agent Supplier, Brokerage, Export Supplier, Product Supplier, Railroad Suppliers,  Trucker Supplier, Warehouse Supplier. Are the only types included in this report</inlineHelpText>
    <label>C &amp; V Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>