force-app/main/default/objects/Account/fields/accmitem_ret_per__c.field-meta.xml
<CustomField>
    <fullName>accmitem_ret_per__c</fullName>
    <label>accmitem_ret_per</label>
    <length>255</length>
    <type>Text</type>
</CustomField>