force-app/main/default/objects/Account/fields/accmledg_balance__c.field-meta.xml
<CustomField>
    <fullName>accmledg_balance__c</fullName>
    <inlineHelpText>Ledger Balance</inlineHelpText>
    <label>accmledg_balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>