force-app/main/default/objects/Account/fields/accmname__c.field-meta.xml
<CustomField>
    <fullName>accmname__c</fullName>
    <inlineHelpText>Account Name</inlineHelpText>
    <label>accmname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>