force-app/main/default/objects/Account/fields/accmphone__c.field-meta.xml
<CustomField>
    <fullName>accmphone__c</fullName>
    <inlineHelpText>Phone Number</inlineHelpText>
    <label>accmphone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>