force-app/main/default/objects/Account/fields/accmpost_code__c.field-meta.xml
<CustomField>
    <fullName>accmpost_code__c</fullName>
    <inlineHelpText>Zip code</inlineHelpText>
    <label>accmpost_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>