force-app/main/default/objects/Account/fields/accmsal_buy__c.field-meta.xml
<CustomField>
    <fullName>accmsal_buy__c</fullName>
    <inlineHelpText>Hoogwegt employee who manages the account.  If blank no employee is assigned to this account.</inlineHelpText>
    <label>Salesperson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>