force-app/main/default/objects/Account/fields/accmShortName__c.field-meta.xml
<CustomField>
    <fullName>accmShortName__c</fullName>
    <label>Short Name (MTMS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>