force-app/main/default/objects/Account/fields/accmtelex__c.field-meta.xml
<CustomField>
    <fullName>accmtelex__c</fullName>
    <inlineHelpText>Date when W9 Received</inlineHelpText>
    <label>accmtelex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>