force-app/main/default/objects/Account/fields/accmterms_days__c.field-meta.xml
<CustomField>
    <fullName>accmterms_days__c</fullName>
    <inlineHelpText>Terms in Days</inlineHelpText>
    <label>Credit Terms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>