force-app/main/default/objects/Account/fields/accmterms_eom__c.field-meta.xml
<CustomField>
    <fullName>accmterms_eom__c</fullName>
    <inlineHelpText>Terms EOM</inlineHelpText>
    <label>accmterms_eom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>