force-app/main/default/objects/Account/fields/accmtotal_os_con__c.field-meta.xml
<CustomField>
    <fullName>accmtotal_os_con__c</fullName>
    <inlineHelpText>Outstanding Contra</inlineHelpText>
    <label>accmtotal_os_con</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>