force-app/main/default/objects/Account/fields/accmtotal_os_crn__c.field-meta.xml
<CustomField>
    <fullName>accmtotal_os_crn__c</fullName>
    <inlineHelpText>Outstanding Credit Notes</inlineHelpText>
    <label>accmtotal_os_crn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>