force-app/main/default/objects/Account/fields/accmtotal_os_csh__c.field-meta.xml
<CustomField>
    <fullName>accmtotal_os_csh__c</fullName>
    <inlineHelpText>Outstanding Cash</inlineHelpText>
    <label>accmtotal_os_csh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>