force-app/main/default/objects/Account/fields/accmtotal_os_dis__c.field-meta.xml
<CustomField>
    <fullName>accmtotal_os_dis__c</fullName>
    <inlineHelpText>Outstanding Discounts</inlineHelpText>
    <label>accmtotal_os_dis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>