force-app/main/default/objects/Account/fields/accmtotal_os_inv__c.field-meta.xml
<CustomField>
    <fullName>accmtotal_os_inv__c</fullName>
    <inlineHelpText>Total value of any outstanding Invoices on the Ledgers for the Customer/Supplier</inlineHelpText>
    <label>accmtotal_os_inv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>