force-app/main/default/objects/Account/fields/accmturnover_lyr__c.field-meta.xml
<CustomField>
    <fullName>accmturnover_lyr__c</fullName>
    <inlineHelpText>Last Year Turnover</inlineHelpText>
    <label>Turnover Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>