force-app/main/default/objects/Account/fields/accmturnover_per__c.field-meta.xml
<CustomField>
    <fullName>accmturnover_per__c</fullName>
    <inlineHelpText>Period Turnover</inlineHelpText>
    <label>accmturnover_per</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>