force-app/main/default/objects/Account/fields/accmturnover_ytd__c.field-meta.xml
<CustomField>
    <fullName>accmturnover_ytd__c</fullName>
    <inlineHelpText>YTD Turnover</inlineHelpText>
    <label>Turnover YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>