force-app/main/default/objects/Account/fields/accmuninv_orders__c.field-meta.xml
<CustomField>
    <fullName>accmuninv_orders__c</fullName>
    <inlineHelpText>UnInvoiced Orders</inlineHelpText>
    <label>accmuninv_orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>