force-app/main/default/objects/Account/fields/accmupdate_count__c.field-meta.xml
<CustomField>
    <fullName>accmupdate_count__c</fullName>
    <inlineHelpText>Update Count</inlineHelpText>
    <label>accmupdate_count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>