force-app/main/default/objects/Account/fields/accmval_1__c.field-meta.xml
<CustomField>
    <fullName>accmval_1__c</fullName>
    <label>accmval_1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>