force-app/main/default/objects/Account/fields/accmval_invs__c.field-meta.xml
<CustomField>
    <fullName>accmval_invs__c</fullName>
    <label>accmval_invs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>