force-app/main/default/objects/Account/fields/accmval_pickdesp__c.field-meta.xml
<CustomField>
    <fullName>accmval_pickdesp__c</fullName>
    <label>accmval_pickdesp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>