force-app/main/default/objects/Account/fields/Account_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Level__c</fullName>
    <formula>IF(
ISBLANK(Parent_Account__c),
&quot;Parent&quot;,
&quot;Child&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Level</label>
    <type>Text</type>
</CustomField>