force-app/main/default/objects/Account/fields/Additional_Document_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Document_Information__c</fullName>
    <label>Additional Document Information</label>
    <type>TextArea</type>
</CustomField>