force-app/main/default/objects/Account/fields/Additional_Info_on_additive_requirement__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_on_additive_requirement__c</fullName>
    <label>Additional Info on additive requirement</label>
    <type>TextArea</type>
</CustomField>