force-app/main/default/objects/Account/fields/Additional_Info_on_Halal_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_on_Halal_Certificate__c</fullName>
    <label>Additional Info on Halal Certificate</label>
    <type>TextArea</type>
</CustomField>