force-app/main/default/objects/Account/fields/Additional_Instruction_for_Technical_Doc__c.field-meta.xml
<CustomField>
    <fullName>Additional_Instruction_for_Technical_Doc__c</fullName>
    <label>Additional Instruction for Technical Doc</label>
    <type>TextArea</type>
</CustomField>