force-app/main/default/objects/Account/fields/Additional_items_inside_container__c.field-meta.xml
<CustomField>
    <fullName>Additional_items_inside_container__c</fullName>
    <label>Additional items inside container</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thermologgers</fullName>
            </value>
            <value>
                <fullName>Moisture absorbers</fullName>
            </value>
            <value>
                <fullName>Documents in container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>