force-app/main/default/objects/Account/fields/Additional_Label_each_Package__c.field-meta.xml
<CustomField>
    <fullName>Additional_Label_each_Package__c</fullName>
    <inlineHelpText>Does the customer require an additional label on each package?</inlineHelpText>
    <label>Additional Label each Package</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Logistics_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>