force-app/main/default/objects/Account/fields/Additional_Label_each_Pallet__c.field-meta.xml
<CustomField>
    <fullName>Additional_Label_each_Pallet__c</fullName>
    <label>Additional Label each Pallet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>