force-app/main/default/objects/Account/fields/Additional_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requirements__c</fullName>
    <label>Additional Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>