force-app/main/default/objects/Account/fields/Additional_testing_required__c.field-meta.xml
<CustomField>
    <fullName>Additional_testing_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional testing required</label>
    <type>Checkbox</type>
</CustomField>