force-app/main/default/objects/Account/fields/Additives__c.field-meta.xml
<CustomField>
    <fullName>Additives__c</fullName>
    <label>Customer Require Additives?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>