force-app/main/default/objects/Account/fields/Adjusted_CoA_or_supplementary_CoA__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_CoA_or_supplementary_CoA__c</fullName>
    <label>Adjusted CoA or Supplementary CoA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>