force-app/main/default/objects/Account/fields/Aflatoxin_M1_Statement__c.field-meta.xml
<CustomField>
    <fullName>Aflatoxin_M1_Statement__c</fullName>
    <label>Aflatoxin M1 Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>