force-app/main/default/objects/Account/fields/Age_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Age_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age Requirement</label>
    <type>Checkbox</type>
</CustomField>