force-app/main/default/objects/Account/fields/AllTraders__c.field-meta.xml
<CustomField>
    <fullName>AllTraders__c</fullName>
    <formula>Trader_user__r.FirstName+ &apos; &apos; +Trader_user__r.LastName  +&quot;, &quot;+  Secondary_Trader_1__r.FirstName+ &apos; &apos; +  Secondary_Trader_1__r.LastName  +&quot;, &quot;+ Secondary_Trader_2__r.FirstName+ &apos; &apos; +  Secondary_Trader_2__r.LastName  +&quot;, &quot;+ Secondary_Trader_3__r.FirstName+ &apos; &apos; +  Secondary_Trader_3__r.LastName  +&quot;, &quot;+ Secondary_Trader_4__r.FirstName+ &apos; &apos; +  Secondary_Trader_4__r.LastName  +&quot;, &quot;+ Secondary_Trader_5__r.FirstName+ &apos; &apos; +  Secondary_Trader_5__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traders</label>
    <type>Text</type>
</CustomField>