force-app/main/default/objects/Account/fields/AlternatePayor__c.field-meta.xml
<CustomField>
    <fullName>AlternatePayor__c</fullName>
    <label>AlternatePayor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>