force-app/main/default/objects/Account/fields/Antibiotics_Statement__c.field-meta.xml
<CustomField>
    <fullName>Antibiotics_Statement__c</fullName>
    <label>Antibiotics Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>