force-app/main/default/objects/Account/fields/Any_Storage_Transport_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Any_Storage_Transport_Conditions__c</fullName>
    <label>Storage/Transport Conditions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>