force-app/main/default/objects/Account/fields/Any_Technical_Document_for_each_Loading__c.field-meta.xml
<CustomField>
    <fullName>Any_Technical_Document_for_each_Loading__c</fullName>
    <label>Any Technical Document for each Loading</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GFSI</fullName>
            </value>
            <value>
                <fullName>GMP+</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>VLOG</fullName>
            </value>
            <value>
                <fullName>GMO Free statement</fullName>
            </value>
            <value>
                <fullName>Allergen declaration</fullName>
            </value>
            <value>
                <fullName>Heavy metals statement</fullName>
            </value>
            <value>
                <fullName>Antibiotics statement</fullName>
            </value>
            <value>
                <fullName>Pesticides, incl. dioxins statement</fullName>
            </value>
            <value>
                <fullName>Aflatoxin M1 statement</fullName>
            </value>
            <value>
                <fullName>Melamine statement</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>