force-app/main/default/objects/Account/fields/Any_Technical_Document_Other__c.field-meta.xml
<CustomField>
    <fullName>Any_Technical_Document_Other__c</fullName>
    <label>Any Technical Document Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>